Redo database table structure and add additional APIs.